fix bug to make sure program can run
