# handlers/apiversion_imp/api_version.go
@@ -1,13 +1,37 @@
 package apiversion_imp
 
 import (
-	"github.com/bbcyyb/bunkerhill/restapi/operations"
-	"github.com/bbcyyb/bunkerhill/restapi/operations/apiversion"
-	middleware "github.github.com/go-openapi/runtime/middleware"
+	"io/ioutil"
+	"log"
 	"os"
 	"strings"
+
+	"github.com/bbcyyb/bunkerhill/models"
+	"github.com/bbcyyb/bunkerhill/restapi/operations/apiversion"
+	middleware "github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/swag"
 )
 
 func GetAPIVersion(params apiversion.GetAPIVersionParams) middleware.Responder {
-	return nil
+	err_payload := &models.GenericError{
+		Message: "api version file not found or could not be read",
+	}
+
+	log.Println(params)
+
+	if file, err := os.Open("version/version"); err == nil {
+		if data, err := ioutil.ReadAll(file); err == nil {
+			stdout := strings.Fields(string(data))
+			payload := &models.GetAPIVersionOKBody{
+				Data: &models.Apiversion{
+					APIVersion: swag.String(stdout[0]),
+				},
+			}
+			defer file.Close()
+
+			return apiversion.NewGetAPIVersionOK().WithPayload(payload)
+		}
+	}
+
+	return apiversion.NewGetAPIVersionInternalServerError().WithPayload(err_payload)
 }
