# handlers/blog_imp/blog.go
@@ -1,13 +1,10 @@
 package blog_imp
 
 import (
-	"github.com/bbcyyb/bunkerhill/restapi/operations"
 	"github.com/bbcyyb/bunkerhill/restapi/operations/blog"
-	middleware "github.github.com/go-openapi/runtime/middleware"
-	"os"
-	"strings"
+	middleware "github.com/go-openapi/runtime/middleware"
 )
 
-func GetAPIVersion(params apiversion.GetBlogParams) middleware.Responder {
+func GetBlog(params blog.GetBlogParams) middleware.Responder {
 	return nil
 }
